// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kaihao.dev baseline 1`] = `
Object {
  "meta": Object {
    "description": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
    "generator": "Gatsby 2.15.11",
    "og": Object {
      "description": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
      "image": Object {
        "height": "626",
        "url": "https://kaihao.dev/static/15baf5b2b73048942a827496d3805470/70e2c/default-meta-image.png",
        "width": "1200",
      },
      "title": "Kai Hao",
      "type": "website",
      "url": "https://kaihao.dev/",
    },
    "theme-color": "#f2994a",
    "twitter": Object {
      "card": "summary_large_image",
      "creator": "@kevin940726",
      "description": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
      "image": "https://kaihao.dev/static/15baf5b2b73048942a827496d3805470/70e2c/default-meta-image.png",
      "title": "Kai Hao",
    },
    "viewport": "width=device-width, initial-scale=1, shrink-to-fit=no",
  },
  "results": Object {
    "facebook": Object {
      "errors": Array [
        Object {
          "content": undefined,
          "message": "In order to use Facebook Insights you must add the app ID to your page.",
          "property": "fb:app_id",
          "type": "warning",
          "valid": false,
        },
      ],
      "name": "Facebook",
      "validations": Array [
        Object {
          "content": undefined,
          "message": "In order to use Facebook Insights you must add the app ID to your page.",
          "property": "fb:app_id",
          "type": "warning",
          "valid": false,
        },
        Object {
          "content": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
          "message": "Expected to match /.+/, but received \`I&#x27;m Kai Hao, a front-end developer in Taiwan.\`.",
          "property": "og:description",
          "valid": true,
        },
      ],
    },
    "og": Object {
      "errors": Array [
        Object {
          "content": undefined,
          "message": "\\"og:image.alt\\" is required when specifying \\"og:image\\" or \\"og:image:url\\"",
          "property": "og:image:alt",
          "type": "warning",
          "valid": false,
        },
      ],
      "name": "Open Graph",
      "validations": Array [
        Object {
          "content": "https://kaihao.dev/",
          "message": "Expected to match /.+/, but received \`https://kaihao.dev/\`.",
          "property": "og:url",
          "valid": true,
        },
        Object {
          "content": "Kai Hao",
          "message": "Expected to match /.+/, but received \`Kai Hao\`.",
          "property": "og:title",
          "valid": true,
        },
        Object {
          "content": "website",
          "message": "Expected to match /^(music\\\\.(song|album|playlist|radio_station)|video\\\\.(movie|episode|tv_show|other)|article|book|profile|website)$/, but received \`website\`.",
          "property": "og:type",
          "valid": true,
        },
        Object {
          "content": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
          "message": "Expected string, received I&#x27;m Kai Hao, a front-end developer in Taiwan..",
          "property": "og:description",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected string, received undefined.",
          "property": "og:site_name",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected determiner to be one of (a, an, the, \\"\\", auto), received undefined",
          "property": "og:determiner",
          "valid": true,
        },
        Object {
          "content": "https://kaihao.dev/static/15baf5b2b73048942a827496d3805470/70e2c/default-meta-image.png",
          "message": "Expected url to have 'http' or 'https' protocol, received https:",
          "property": "og:image:url",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:image:secure_url",
          "valid": true,
        },
        Object {
          "content": "1200",
          "message": "Expected integer, received 1200",
          "property": "og:image:width",
          "valid": true,
        },
        Object {
          "content": "626",
          "message": "Expected integer, received 626",
          "property": "og:image:height",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "\\"og:image.alt\\" is required when specifying \\"og:image\\" or \\"og:image:url\\"",
          "property": "og:image:alt",
          "type": "warning",
          "valid": false,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:video:url",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:video:secure_url",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected integer, received undefined",
          "property": "og:video:width",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected integer, received undefined",
          "property": "og:video:height",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:audio:url",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:audio:secure_url",
          "valid": true,
        },
      ],
    },
    "twitter": Object {
      "errors": Array [],
      "name": "Twitter",
      "validations": Array [
        Object {
          "content": "summary_large_image",
          "message": "Expected one of (summary, summary_large_image, app, player), received \`summary_large_image\`.",
          "property": "twitter:card",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected to match /^@.+$|^$/, but received \`undefined\`.",
          "property": "twitter:site",
          "valid": true,
        },
        Object {
          "content": "@kevin940726",
          "message": "Expected to match /^@.+$|^$/, but received \`@kevin940726\`.",
          "property": "twitter:creator",
          "valid": true,
        },
      ],
    },
  },
}
`;

exports[`kaihao.dev enable all features 1`] = `
Object {
  "meta": Object {
    "description": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
    "generator": "Gatsby 2.15.11",
    "og": Object {
      "description": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
      "image": Object {
        "height": "626",
        "url": "https://kaihao.dev/static/15baf5b2b73048942a827496d3805470/70e2c/default-meta-image.png",
        "width": "1200",
      },
      "title": "Kai Hao",
      "type": "website",
      "url": "https://kaihao.dev/",
    },
    "theme-color": "#f2994a",
    "twitter": Object {
      "card": "summary_large_image",
      "creator": "@kevin940726",
      "description": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
      "image": "https://kaihao.dev/static/15baf5b2b73048942a827496d3805470/70e2c/default-meta-image.png",
      "title": "Kai Hao",
    },
    "viewport": "width=device-width, initial-scale=1, shrink-to-fit=no",
  },
  "results": Object {
    "AASA": Object {
      "errors": Array [
        Object {
          "content": "Error",
          "message": "Response status returns 404 when trying to access https://kaihao.dev/apple-app-site-association,
and returns status 404 when trying to access https://kaihao.dev/.well-known/apple-app-site-association.
One of the above url should be set up to be accessed.",
          "property": "apple-app-site-association",
          "valid": false,
        },
      ],
      "name": "Apple universal link",
      "validations": Array [
        Object {
          "content": "Error",
          "message": "Response status returns 404 when trying to access https://kaihao.dev/apple-app-site-association,
and returns status 404 when trying to access https://kaihao.dev/.well-known/apple-app-site-association.
One of the above url should be set up to be accessed.",
          "property": "apple-app-site-association",
          "valid": false,
        },
      ],
    },
    "assetlinks": Object {
      "errors": Array [
        Object {
          "content": "Error",
          "message": "Response status returns 404 when trying to access https://kaihao.dev/.well-known/assetlinks.json.",
          "property": "assetlinks.json",
          "valid": false,
        },
      ],
      "name": "Android app link",
      "validations": Array [
        Object {
          "content": "Error",
          "message": "Response status returns 404 when trying to access https://kaihao.dev/.well-known/assetlinks.json.",
          "property": "assetlinks.json",
          "valid": false,
        },
      ],
    },
    "facebook": Object {
      "errors": Array [
        Object {
          "content": undefined,
          "message": "In order to use Facebook Insights you must add the app ID to your page.",
          "property": "fb:app_id",
          "type": "warning",
          "valid": false,
        },
      ],
      "name": "Facebook",
      "validations": Array [
        Object {
          "content": undefined,
          "message": "In order to use Facebook Insights you must add the app ID to your page.",
          "property": "fb:app_id",
          "type": "warning",
          "valid": false,
        },
        Object {
          "content": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
          "message": "Expected to match /.+/, but received \`I&#x27;m Kai Hao, a front-end developer in Taiwan.\`.",
          "property": "og:description",
          "valid": true,
        },
      ],
    },
    "facebookAppLinkAndroid": Object {
      "errors": Array [
        Object {
          "content": undefined,
          "message": "Expected to match /.+/, but received \`undefined\`.",
          "property": "al:android:package",
          "valid": false,
        },
      ],
      "name": "Facebook app link for Android",
      "validations": Array [
        Object {
          "content": undefined,
          "message": "Expected string, received undefined.",
          "property": "al:android:app_name",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected to match /.+/, but received \`undefined\`.",
          "property": "al:android:package",
          "valid": false,
        },
        Object {
          "content": undefined,
          "message": "Expected string, received undefined.",
          "property": "al:android:class",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected to match /^(.+:\\\\/\\\\/.*|)$/, but received \`undefined\`.",
          "property": "al:android:url",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected to match /^(true|false|)$/, but received \`undefined\`.",
          "property": "al:web:should_fallback",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "al:web:url",
          "valid": true,
        },
      ],
    },
    "facebookAppLinkIOS": Object {
      "errors": Array [
        Object {
          "content": undefined,
          "message": "Expected to match /^(.+:\\\\/\\\\/.*)$/, but received \`undefined\`.",
          "property": "al:ios:url",
          "valid": false,
        },
      ],
      "name": "Facebook app link for iOS",
      "validations": Array [
        Object {
          "content": undefined,
          "message": "Expected string, received undefined.",
          "property": "al:ios:app_name",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected string, received undefined.",
          "property": "al:ios:app_store_id",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected to match /^(.+:\\\\/\\\\/.*)$/, but received \`undefined\`.",
          "property": "al:ios:url",
          "valid": false,
        },
        Object {
          "content": undefined,
          "message": "Expected to match /^(true|false|)$/, but received \`undefined\`.",
          "property": "al:web:should_fallback",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "al:web:url",
          "valid": true,
        },
      ],
    },
    "og": Object {
      "errors": Array [
        Object {
          "content": undefined,
          "message": "\\"og:image.alt\\" is required when specifying \\"og:image\\" or \\"og:image:url\\"",
          "property": "og:image:alt",
          "type": "warning",
          "valid": false,
        },
      ],
      "name": "Open Graph",
      "validations": Array [
        Object {
          "content": "https://kaihao.dev/",
          "message": "Expected to match /.+/, but received \`https://kaihao.dev/\`.",
          "property": "og:url",
          "valid": true,
        },
        Object {
          "content": "Kai Hao",
          "message": "Expected to match /.+/, but received \`Kai Hao\`.",
          "property": "og:title",
          "valid": true,
        },
        Object {
          "content": "website",
          "message": "Expected to match /^(music\\\\.(song|album|playlist|radio_station)|video\\\\.(movie|episode|tv_show|other)|article|book|profile|website)$/, but received \`website\`.",
          "property": "og:type",
          "valid": true,
        },
        Object {
          "content": "I&#x27;m Kai Hao, a front-end developer in Taiwan.",
          "message": "Expected string, received I&#x27;m Kai Hao, a front-end developer in Taiwan..",
          "property": "og:description",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected string, received undefined.",
          "property": "og:site_name",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected determiner to be one of (a, an, the, \\"\\", auto), received undefined",
          "property": "og:determiner",
          "valid": true,
        },
        Object {
          "content": "https://kaihao.dev/static/15baf5b2b73048942a827496d3805470/70e2c/default-meta-image.png",
          "message": "Expected url to have 'http' or 'https' protocol, received https:",
          "property": "og:image:url",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:image:secure_url",
          "valid": true,
        },
        Object {
          "content": "1200",
          "message": "Expected integer, received 1200",
          "property": "og:image:width",
          "valid": true,
        },
        Object {
          "content": "626",
          "message": "Expected integer, received 626",
          "property": "og:image:height",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "\\"og:image.alt\\" is required when specifying \\"og:image\\" or \\"og:image:url\\"",
          "property": "og:image:alt",
          "type": "warning",
          "valid": false,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:video:url",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:video:secure_url",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected integer, received undefined",
          "property": "og:video:width",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected integer, received undefined",
          "property": "og:video:height",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:audio:url",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Failed to parse the url. Invalid URL",
          "property": "og:audio:secure_url",
          "valid": true,
        },
      ],
    },
    "twitter": Object {
      "errors": Array [],
      "name": "Twitter",
      "validations": Array [
        Object {
          "content": "summary_large_image",
          "message": "Expected one of (summary, summary_large_image, app, player), received \`summary_large_image\`.",
          "property": "twitter:card",
          "valid": true,
        },
        Object {
          "content": undefined,
          "message": "Expected to match /^@.+$|^$/, but received \`undefined\`.",
          "property": "twitter:site",
          "valid": true,
        },
        Object {
          "content": "@kevin940726",
          "message": "Expected to match /^@.+$|^$/, but received \`@kevin940726\`.",
          "property": "twitter:creator",
          "valid": true,
        },
      ],
    },
  },
}
`;
